<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright 2019, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="sound_category"
        app:title="Sound">
        <SwitchPreferenceCompat
            app:key="@string/background_music_on_off_key"
            app:title="@string/background_music_on_off_title"
            app:defaultValue="@string/background_music_on_off_default"/>

        <ListPreference
            android:defaultValue="@string/background_music_song_default"
            android:entries="@array/background_music_songs_strings"
            android:entryValues="@array/background_music_songs_values"
            android:key = "@string/background_music_song_key"
            android:title = "@string/background_music_song_title"
            android:summary="%s"/>

        <SeekBarPreference
            android:key = "@string/background_music_volume_key"
            app:title="@string/background_music_volume_title"
            android:summary = "Adjust magnitude"
            android:defaultValue = "@string/background_music_volume_default"
            android:min = "0"
            android:max = "100" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="theme_category"
        app:title="Themes">
        <ListPreference
            android:defaultValue="@string/map_style_default"
            android:entries="@array/map_style_strings"
            android:entryValues="@array/map_style_values"
            android:key = "@string/map_style_key"
            android:title = "@string/map_style_title"
            android:summary="%s" />
    </PreferenceCategory>
</PreferenceScreen>