<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.TitleFragment">

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/primaryColor">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_title"
            android:textAppearance="?attr/textAppearanceHeadline2" />


        <ImageView
            android:id="@+id/title_image"
            android:layout_width="@dimen/title_image_width"
            android:layout_height="@dimen/title_image_height"
            android:contentDescription="@string/title_image_content_description"
            android:elevation="10dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/sunflower_color_detailed" />

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_auth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                style="@style/Widget.Sunflower.Button.Title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                style="@style/Widget.Sunflower.Button.Title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_stop_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_music"
                style="@style/Widget.Sunflower.Button.Title"  />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_start_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_music"
                style="@style/Widget.Sunflower.Button.Title" />
        </LinearLayout>


    </LinearLayout>
</layout>