<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/warning"
            android:textAppearance="@style/TextAppearance.Sunflower.Dialog.Title"
            style="@style/Widgets.Sunflower.Dialog.Title.Warning"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/message_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding_normal"
            android:text="@string/dialog_remove_plants_message"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_positive"
            android:text="@string/label_yes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message_text"
            style="@style/Widget.Sunflower.Button.Dialog.Positive.Warning" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_negative"
            android:text="@string/label_no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_positive"
            app:layout_constraintTop_toBottomOf="@id/message_text"
            style="@style/Widget.Sunflower.Button.Dialog.Negative" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>