<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_dark"
        android:padding="@dimen/padding_medium">

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimaryVariant"
            android:backgroundTint="?attr/colorPrimaryVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/title_image"
                android:layout_width="@dimen/dialog_icon_width"
                android:layout_height="@dimen/dialog_icon_height"
                android:foregroundTint="@android:color/white"
                android:padding="@dimen/padding_small"
                android:text="@string/warning"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/text_size_normal"
                android:tint="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_warning" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:padding="@dimen/text_padding_small"
                android:text="@string/warning"
                android:textColor="@color/tertiaryTextColor"
                android:textSize="@dimen/text_size_dialog_title"
                app:layout_constraintStart_toEndOf="@+id/title_image"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/message_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding_small"
            android:text="@string/dialog_add_plants_message"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_layout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_positive"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:text="@string/label_yes"
            android:textColor="@color/tertiaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message_text"
            style="@style/Widget.Sunflower.Button.Dialog.Positive" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_negative"
            android:padding="@dimen/padding_small"
            android:text="@string/label_no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_positive"
            app:layout_constraintTop_toBottomOf="@+id/message_text"
            style="@style/Widget.Sunflower.Button.Dialog.Negative" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>