<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="?attr/colorSurface"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Widget.Sunflower.Toolbar"
            app:navigationIcon="@drawable/ic_back_circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context="com.example.sunflower_copy.title.AboutFragment">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/about_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/about_image_header_height"
                    android:background="?attr/colorPrimary"
                    android:contentDescription="@string/about_image_content_description"
                    android:padding="@dimen/margin_normal"
                    app:srcCompat="@drawable/sunflower_color_detailed" />

                <TextView
                    android:id="@+id/about_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:text="@string/about_title_text"
                    android:textColor="@color/sunflower_black"
                    android:textAppearance="?attr/textAppearanceHeadline4" />

                <TextView
                    android:id="@+id/about_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:text="@string/about_text"
                    android:textAppearance="?attr/textAppearanceBody1" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>