<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.sunflower_copy.map.MapViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.sunflower_copy.map.MapFragment"
            tools:layout_editor_absoluteX="-173dp"
            tools:layout_editor_absoluteY="0dp" />

        <LinearLayout
            android:id="@+id/instructions_layout"
            android:layout_width="@dimen/instructions_layout_width"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/padding_small"
            android:translationZ="10dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/instructions_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/place_plant_on_the_map"
                android:textStyle="bold"
                app:drawableTint="@color/colorSecondaryText"
                app:drawableEndCompat="@drawable/ic_drop_down" />

            <TextView
                android:id="@+id/instructions_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/planting_on_map_instructions"
                android:visibility="gone"
                tools:visibility="visible" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.94">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_cancel"
                android:backgroundTint="@android:color/holo_red_dark"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close"
                tools:visibility="visible"
                app:borderWidth="@dimen/dimen_fab_border_0"
                style="@style/FabStyle"/>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_move"
                app:layout_constraintStart_toEndOf="@id/fab_cancel"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <Button
                android:id="@+id/button_move"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/move"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/fab_confirm"
                app:layout_constraintStart_toEndOf="@id/button"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_confirm"
                android:backgroundTint="@color/colorPrimaryDark"
                android:visibility="invisible"
                app:borderWidth="@dimen/dimen_fab_border_0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/button_move"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_check"
                tools:visibility="visible"
                style="@style/FabStyle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/polygon_color_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/constraint_layout_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.448"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.884"
            android:gravity="center_vertical"
            android:visibility="invisible"
            tools:visibility="visible"
            android:padding="@dimen/padding_extra_small"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hue_text"
                android:text="@string/hue"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

            <SeekBar
                android:id="@+id/fill_hue_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="360"
                android:progress="180"
                android:visibility="visible" />
            <TextView
                android:id="@+id/alpha_text"
                android:text="@string/transparency"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

            <SeekBar
                android:id="@+id/fill_alpha_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:progress="127"
                android:visibility="visible" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>